@@ -5,21 +5,37 @@ import com.github.kotvertolet.youtubejextractor.exception.ExtractionException;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
 public class StringUtils {
 
-    private final static String[] META_CHARACTERS =
-            {"\\", "^", "$", "{", "}", "[", "]", "(", ")", ".", "*", "+", "?", "|", "<", ">", "-", "&", "%"};
+    public static final String UTF_8 = StandardCharsets.UTF_8.name();
+
+    public static String urlDecode(String urlEncodedStr) {
+        try {
+            return URLDecoder.decode(urlEncodedStr, UTF_8);
+        } catch (UnsupportedEncodingException e) {
+            return URLDecoder.decode(urlEncodedStr);
+        }
+    }
 
     static String escapeRegExSpecialCharacters(String inputString) {
-        for (String metaCharacter : META_CHARACTERS) {
+        final String[] metaCharacters = {"\\", "^", "$", "{", "}", "[", "]", "(", ")", ".", "*", "+", "?", "|", "<", ">", "-", "&", "%"};
+
+        for (String metaCharacter : metaCharacters) {
             if (inputString.contains(metaCharacter)) {
                 inputString = inputString.replace(metaCharacter, "\\" + metaCharacter);
             }
         }
         return inputString;
+    }
+
+    public static String urlParamsToJson(String paramIn) {
+        paramIn = paramIn.replaceAll("=", "\":\"");
+        paramIn = paramIn.replaceAll("&", "\",\"");
+        return "{\"" + paramIn + "\"}";
     }
 
     public static Map<String, String> splitUrlParams(String url) throws ExtractionException {
@@ -37,10 +53,10 @@ public class StringUtils {
         for (String queryParam : queryParamsArr) {
             final int idx = queryParam.indexOf("=");
             try {
-                final String key = idx > 0 ? URLDecoder.decode(queryParam.substring(0, idx), "UTF-8") : queryParam;
+                final String key = idx > 0 ? URLDecoder.decode(queryParam.substring(0, idx), UTF_8) : queryParam;
                 if (!queryPairs.containsKey(key)) {
                     final String value = idx > 0 && queryParam.length() > idx + 1
-                            ? URLDecoder.decode(queryParam.substring(idx + 1), "UTF-8") : null;
+                            ? URLDecoder.decode(queryParam.substring(idx + 1), UTF_8) : null;
                     queryPairs.put(key, value);
                 }
             } catch (UnsupportedEncodingException e) {
